# nokkhum-processor

./: CMakeLists.txt  README.rst
config/: camera.json
src/: main.cpp
src/camera/: camera.cpp  camera.hpp  camera_factory.cpp  camera_factory.hpp  cv_camera.cpp  cv_camera.hpp  cv_ip_camera.cpp  cv_ip_camera.hpp  ip_camera.cpp  ip_camera.hpp
src/command_interface/: command_parser.cpp  command_parser.hpp  program_reporter.cpp  program_reporter.hpp
src/config/: attribute.cpp  attribute.hpp  camera_attribute.cpp  camera_attribute.hpp  camera_property.cpp  camera_property.hpp  configuration.cpp  configuration.hpp  face_detector_attribute.cpp  face_detector_attribute.hpp  face_detector_property.cpp  face_detector_property.hpp  face_preprocess_attribute.cpp  face_preprocess_attribute.hpp  face_recognition_attribute.cpp  face_recognition_attribute.hpp  image_processor_attribute.cpp  image_processor_attribute.hpp  image_processor_property.cpp  image_processor_property.hpp  image_recorder_attribute.cpp  image_recorder_attribute.hpp  image_recorder_property.cpp  image_recorder_property.hpp  json_parser.cpp  json_parser.hpp  motion_detector_attribute.cpp  motion_detector_attribute.hpp  motion_detector_property.cpp  motion_detector_property.hpp  multimedia_recorder_attribute.cpp  multimedia_recorder_attribute.hpp  none_processor_attribute.cpp  none_processor_attribute.hpp  notification_attribute.cpp  notification_attribute.hpp  property.cpp  property.hpp  recorder_attribute.cpp  recorder_attribute.hpp  (+6 more)
src/image/: image.cpp  image.hpp
src/surveillance/: image_acquisition.cpp  image_acquisition.hpp  job.cpp  job.hpp  surveillance_manager.cpp  surveillance_manager.hpp  video_recorder.cpp  video_recorder.hpp  video_surveillance.cpp  video_surveillance.hpp
src/surveillance/acquisition/: image_acquisition.cpp  image_acquisition.hpp
src/surveillance/notification/: notification.cpp  notification.hpp
src/surveillance/process/: face_detection.cpp  face_detection.hpp  face_detector.cpp  face_detector.hpp  image-recorder.hpp  image_processor.cpp  image_processor.hpp  image_processor_factory.cpp  image_processor_factory.hpp  image_recorder.cpp  motion_detection.cpp  motion_detection.hpp  motion_detector.cpp  motion_detector.hpp  video_recorder.cpp  video_recorder.hpp
src/surveillance/processor/: face_detector.cpp  face_detector.hpp  face_preprocess.cpp  face_preprocess.hpp  face_recognition.cpp  face_recognition.hpp  image_processor.cpp  image_processor.hpp  image_processor_factory.cpp  image_processor_factory.hpp  image_recorder.cpp  image_recorder.hpp  motion_detector.cpp  motion_detector.hpp  motion_detector_background_sub.cpp  motion_detector_background_sub.hpp  multimedia_recorder.cpp  multimedia_recorder.hpp  none_processor.cpp  none_processor.hpp  video_motion_recorder.cpp  video_motion_recorder.hpp  video_recorder.cpp  video_recorder.hpp
src/util/: cv_mat_queue.cpp  cv_mat_queue.hpp  directory_manager.cpp  directory_manager.hpp  image_queue.cpp  image_queue.hpp  json-parser.cpp  json-parser.hpp  json_parser.cpp  json_parser.hpp  multiple_image_queue.cpp  multiple_image_queue.hpp  multiple_mat_queue.cpp  multiple_mat_queue.hpp
src/video/: cv_video_writer.cpp  cv_video_writer.hpp  ffmpg_video_writer.cpp  ffmpg_video_writer.hpp  video_writer.cpp  video_writer.hpp
tests/: nokkhum-test.cpp
tests/json_test/: CMakeLists.txt  json-test.cpp  json_parser_test.cpp  json_parser_test.hpp
tests/processor_builder/: processor_builder.cpp  processor_builder.hpp
tests/surveillance/: surveillance.cpp  surveillance.hpp
